# file-compare

./: Cargo.toml  README.md
src/: main.rs
src/clap_parser/: mod.rs
src/test_data/: first.txt  second.txt
src/trie/: integration_tests.rs  mod.rs  ternary_trie.rs  tests.rs  tests_original.rs
